<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPatientTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="   Patient ID            Age                     Patient Name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPatientId"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/textinputborder"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextPatientAge"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/textinputborder"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        <EditText
            android:id="@+id/editTextPatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/textinputborder"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="    Sex   " />

        <RadioGroup
            android:id="@+id/radioSex"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sexMale"
                android:textColorLink="#00000000"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexFemale"
                android:textColorLink="#00000000"
                android:textSize="12sp" />
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/runButton"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_selector_run"
            android:onClick="runClicked"
            android:text="@string/button_label_run"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_selector_stop"
            android:onClick="stopClicked"
            android:text="@string/button_label_stop"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_selector"
            android:onClick="uploadClicked"
            android:text="@string/upload_db"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_selector"
            android:onClick="downloadClicked"
            android:text="@string/download_db"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.example.skumaresan2.GraphView

        android:id="@+id/customGraph1"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"/>

    <com.example.skumaresan2.GraphView

        android:id="@+id/customGraph2"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"/>


    <com.example.skumaresan2.GraphView

        android:id="@+id/customGraph3"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"/>



</LinearLayout>